<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:id="@+id/insert_phone_lyt"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/phone_number_et"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:hint="@string/insert_phone_number"
            android:inputType="phone"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/verify_phone_btn"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/insert_code_lyt"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/back_btn"
            android:background="@android:color/transparent"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false"
            android:text="@string/back"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/code_et"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:layout_centerInParent="true"
            android:hint="@string/insert_code"
            android:inputType="number"
            android:autofillHints=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/verify_code_btn"
            android:visibility="gone"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:text="@string/proceed"
            android:textAllCaps="false"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/loading"
        android:background="@color/white_semitransparent"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ProgressBar
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
</RelativeLayout>